--- a/css/style.css
+++ b/css/style.css
@@ -187,16 +187,16 @@ a:hover {
 /*GALLERY*/
 #viewerBG {
     width: 100%;
-    height: 350vh;
+    height: 100vh;
     background-color: rgba(0,0,0,.7);
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 .galleryViewer {
     width: 95%;
     margin: 0 2%;
     position: relative;
-    top: 82%;
+    top: 30%;
 }
 .closeButton {
     background-color: rgba(0,0,0,.5);
